gcc/testsuite/rust/rustc/ui/coherence/coherence-negative-impls-safe.rs
#![feature(negative_impls)]

use std::marker::Send;

struct TestType;

unsafe impl !Send for TestType {}
// { dg-error ".E0198." "" { target *-*-* } .-1 }

fn main() {}

